--- a/config/cable.yml
+++ b/config/cable.yml
@@ -5,5 +5,5 @@ test:
   adapter: async
 
 production:
-  adapter: redis
-  url: redis://localhost:6379/1
+  adapter: postgresql
+  url: postgres://lntzxfpcteczpo:oDSBHMvDtDLfmg3-xMEwvPur2y@ec2-23-23-76-90.compute-1.amazonaws.com:5432/dcksrbshpt25bu
